# bnbagent-sdk

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml
bnbagent/: README.md  __init__.py  _version.py  abi_loader.py  acp_client.py  apex_client.py  apex_evaluator_client.py  config.py  constants.py  contract.py  erc8004_agent.py  escrow_client.py  exceptions.py  job_verifier.py  main.py  negotiation.py  oov3_evaluator_client.py  paymaster.py  service_manager_client.py  service_record.py  storage.py
docs/: migration-0.4.md  readme-preview-zh.md  twak-cli-gaps-v0.18.0.md  twak-integration-design.md  twak.md
examples/: README.md  auto_settle.py  client_workflow.py  full_agent.py  karma_integration.py  quickstart_agent.py  register_agent.py  testnet_usage.py  x402_buyer_demo.py
scripts/: README.md  setup_paymaster.py
tests/: README.md  conftest.py  test_agent_uri.py  test_amounts.py  test_apex_client.py  test_apex_config.py  test_apex_job_ops.py  test_apex_middleware.py  test_apex_routes_startup.py  test_apex_schema.py  test_contract_mixin.py  test_erc8004_contract.py  test_erc8183_client.py  test_erc8183_config.py  test_erc8183_intents.py  test_erc8183_job_ops.py  test_erc8183_policy.py  test_erc8183_router.py  test_evaluator_client.py  test_extras_karma.py  test_ipfs_storage.py  test_load_env.py  test_local_executor_paymaster.py  test_local_storage.py  test_models.py  test_module_system.py  test_multicall.py  test_negotiation.py  test_nonce_manager.py  test_paymaster.py  test_progressive_simulation.py  test_quickstart_app.py  test_rate_limit.py  test_resolve_network.py  test_sdk.py  test_service_record.py  test_storage_factory.py  test_storage_providers_from_env.py  (+8 more)
(+238 files in other folders)
